@@ -1,4 +1,5 @@
 PyYAML == 5.3.1
+Jinja2 == 2.11.1
 
 # Install "sandboxlib" as editable
 -e ".[dev,test]"
