@@ -30,3 +30,8 @@ dev =
     flake8==3.7.9
 test =
     pytest==5.4.1
+
+[flake8]
+exclude = build,.git,.tox,./tests/.env
+# ignore = W504,W601
+max-line-length = 119
