@@ -1,0 +1,9 @@
+{%- if texts -%}
+<ul>
+{% for text in texts -%}
+<li>{{ text }}</li>
+{% endfor -%}
+</ul>
+{%- else -%}
+<p>no "texts"</p>
+{%- endif -%}
